# rua

./: Cargo.toml  README.md  README_cn.md  README_en.md
.github/workflows/: release.yml
_tcp-backup/: constants.rs  handle_connection.rs  main.rs
scripts/: pwsh-function-backup.ps1  pwsh.md  zsh-function-backup.sh  zsh.md
src/: cli.rs  commands.rs  config.rs  executor.rs  executor_old.rs  main.rs  server.rs
src/storage/: local.rs  mod.rs  remote.rs
src/tui/: core.rs  mod.rs  ui.rs
