[package]
name = "rua"
version = "1.0.1"
edition = "2024"

[dependencies]
dirs = "6.0"
crossterm = "0.29"
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
# The Three Musketeers
shellexpand = "3.1"
which = "8.0.0"
dunce = "1.0.5"
